--- a/cursos/espanol/deeplearning/3.1_zero_shot_classification.ipynb
+++ b/cursos/espanol/deeplearning/3.1_zero_shot_classification.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Zero Shot Classification\n",
     "\n",
-    "Estos modelos llamados **zero-shot** intentan clasificar texto o imagenes en clases para los cuales no han sido entrenados, es decir, sin finetuning."
+    "Estos modelos llamados **zero-shot** intentan clasificar texto o imagenes en clases para los cuales no han sido entrenados, es decir, sin la tecnica de finetuning que veremos en la siguiente unidad."
    ]
   },
   {
@@ -128,6 +128,70 @@
     "    {\"score\": score, \"label\": candidate_label}\n",
     "    for score, candidate_label in sorted(zip(probs, candidate_labels), key=lambda x: -x[0])\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35a6989a-f47d-4bb3-aec4-f6d746deed92",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 1:\n",
+    "\n",
+    "Clasificar las siguientes peliculas por genero, terror o comedia, utilizando zero shot classification para texto. Probar diferentes modelos y comparar sus resultados.\n",
+    "\n",
+    "Comedia: \n",
+    "- Risa en el paraíso (1987)\n",
+    "- Risa y lágrimas (1954)\n",
+    "- La vida en risa (1996)\n",
+    "- El club de la risa (1999)\n",
+    "- Divertido, divertido (1969)\n",
+    "- Divertida aventura (1964)\n",
+    "- Divertida mente (2015)\n",
+    "- Diversión con Bob (1994)\n",
+    "- Locura de amor (1948)\n",
+    "- Locura en el oeste (1973)\n",
+    "- Locura de verano (1986)\n",
+    "- Locura en el espacio (1987)\n",
+    "- La risa es contagiosa (1969)\n",
+    "- Diversión asegurada (2003)\n",
+    "- Locura y dinero (2008)\n",
+    "\n",
+    "Terror:\n",
+    "- Miedo (2007)\n",
+    "- Miedo en la noche (1972)\n",
+    "- Miedo a volar (1990)\n",
+    "- La matanza de Texas (1974)\n",
+    "- La matanza de Texas 2 (1986)\n",
+    "- La matanza de Texas: El origen (2007)\n",
+    "- Matanza en el colegio (1982)\n",
+    "- La masacre de los inocentes (1991)\n",
+    "- Masacre en la autopista (1977)\n",
+    "- Masacre en el hospital (1982)\n",
+    "- Masacre de zombies (1978)\n",
+    "- Miedo profundo (1998)\n",
+    "- Matanza en Fresno (2016)\n",
+    "- La masacre de Amityville (1979)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf6277b6-c1d6-4e30-9c76-66a7147ded11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Escribir aqui la solucion\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bacb6dca-7805-4ad1-bb7b-7e2bad15c9e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 1 {display-mode:\"form\"}\n"
    ]
   },
   {
