--- a/cursos/espanol/deeplearning/2_texto_a_vectores.ipynb
+++ b/cursos/espanol/deeplearning/2_texto_a_vectores.ipynb
@@ -302,6 +302,78 @@
   },
   {
    "cell_type": "markdown",
+   "id": "05adc898-1cc9-4f67-824a-ec9f934f5615",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 1:\n",
+    "\n",
+    "Clasificar las siguientes peliculas por genero, terror o comedia, utilizando un metodo simple para vectorizar el texto y un modelo de ML de la libreria sklearn.\n",
+    "\n",
+    "Entrenamiento:\n",
+    "\n",
+    "Comedia: \n",
+    "- Risa en el paraíso (1987)\n",
+    "- Risa y lágrimas (1954)\n",
+    "- La vida en risa (1996)\n",
+    "- El club de la risa (1999)\n",
+    "- Divertido, divertido (1969)\n",
+    "- Divertida aventura (1964)\n",
+    "- Divertida mente (2015)\n",
+    "- Diversión con Bob (1994)\n",
+    "- Locura de amor (1948)\n",
+    "- Locura en el oeste (1973)\n",
+    "- Locura de verano (1986)\n",
+    "- Locura en el espacio (1987)\n",
+    "\n",
+    "Terror:\n",
+    "- Miedo (2007)\n",
+    "- Miedo en la noche (1972)\n",
+    "- Miedo a volar (1990)\n",
+    "- La matanza de Texas (1974)\n",
+    "- La matanza de Texas 2 (1986)\n",
+    "- La matanza de Texas: El origen (2007)\n",
+    "- Matanza en el colegio (1982)\n",
+    "- La masacre de los inocentes (1991)\n",
+    "- Masacre en la autopista (1977)\n",
+    "- Masacre en el hospital (1982)\n",
+    "- Masacre de zombies (1978)\n",
+    "\n",
+    "Prueba:\n",
+    "\n",
+    "Comedia: \n",
+    "- La risa es contagiosa (1969)\n",
+    "- Diversión asegurada (2003)\n",
+    "- Locura y dinero (2008)\n",
+    "\n",
+    "Terror:\n",
+    "- Miedo profundo (1998)\n",
+    "- Matanza en Fresno (2016)\n",
+    "- La masacre de Amityville (1979)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d9ce4fb-2475-4114-b72e-99293a4e729d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Escribir aqui la solucion\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1811324-5012-4d98-86e3-34319668dc66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 1 {display-mode:\"form\"}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "94244657-107f-4e36-9d08-88ba57823f71",
    "metadata": {},
    "source": [
