--- a/cursos/espanol/deeplearning/1_imagenes_a_vectores.ipynb
+++ b/cursos/espanol/deeplearning/1_imagenes_a_vectores.ipynb
@@ -137,9 +137,12 @@
     "\n",
     "from PIL import Image\n",
     "import numpy as np\n",
+    "import requests\n",
+    "from io import BytesIO\n",
     "\n",
     "# Abre la imagen\n",
-    "imagen = Image.open(\"https://github.com/amiune/freecodingtour/raw/main/cursos/espanol/deeplearning/data/bananas/normal1.jpeg\")\n",
+    "response = requests.get(\"https://github.com/amiune/freecodingtour/raw/main/cursos/espanol/deeplearning/data/bananas/normal1.jpeg\")\n",
+    "imagen = Image.open(BytesIO(response.content))\n",
     "imagen"
    ]
   },
@@ -219,41 +222,39 @@
     "vectores = {}\n",
     "\n",
     "# Lista de nombres de las imagenes\n",
-    "nombres_imagenes = [f'normal{i}.jpeg' for i in range(5)]\n",
-    "nombres_imagenes.extend([f'madura{i}.jpeg' for i in range(5)]\n",
+    "nombres_imagenes = [f'normal{i}.jpeg' for i in range(1,6)]\n",
+    "nombres_imagenes.extend([f'madura{i}.jpeg' for i in range(1,6)])\n",
     "\n",
     "for nombre_imagen in nombres_imagenes:\n",
     "    # Cargar la imagen\n",
-    "    with Image.open(PATH + nombre_imagen) as img:\n",
-    "        # Convertir a RGBA\n",
-    "        if img.mode != 'RGBA':\n",
-    "            img = img.convert('RGBA')\n",
-    "        \n",
-    "            # Hacer las imagenes del mismo tamaño\n",
-    "            img = img.resize(standard_size, Image.ANTIALIAS)\n",
+    "    response = requests.get(PATH + nombre_imagen)\n",
+    "    \n",
+    "    with Image.open(BytesIO(response.content)) as img:\n",
     "\n",
-    "            # Convertir a numpy array\n",
-    "            img_array = np.array(img)\n",
+    "        # Hacer las imagenes del mismo tamaño\n",
+    "        img = img.resize(IMAGE_SIZE, Image.Resampling.LANCZOS)\n",
     "\n",
-    "            # Identificar los pixeles que no sean transparentes\n",
-    "            non_transparent_mask = img_array[:, :, 3] != 0\n",
+    "        # Convertir a numpy array\n",
+    "        img_array = np.array(img)\n",
     "\n",
-    "            # Calcular el color promedio\n",
-    "            avg_color = np.mean(img_array[non_transparent_mask][:, :3], axis=0)\n",
+    "        # Identificar los pixeles que no sean blancos\n",
+    "        non_blank_mask = (img_array[:,:,0] != 255) & (img_array[:,:,1] != 255) & (img_array[:,:,2] != 255)\n",
+    "        # Calcular el color promedio\n",
+    "        avg_color = np.mean(img_array[non_blank_mask][:,:])\n",
     "\n",
-    "            # Calcular el color promedio por canal\n",
-    "            avg_rgb = [np.mean(img_array[non_transparent_mask][:, i]) for i in range(3)]\n",
+    "        # Calcular el color promedio por canal\n",
+    "        avg_rgb = [np.mean(img_array[non_blank_mask][:,i]) for i in range(3)]\n",
     "\n",
-    "            # Aplanar la matriz\n",
-    "            flattened = img_array[non_transparent_mask][:, :3].flatten()\n",
+    "        # Aplanar la matriz\n",
+    "        flattened = img_array[non_blank_mask][:,:].flatten()\n",
     "\n",
-    "            # Guardar los resultados\n",
-    "            vectores[filename] = {\n",
-    "                'avg_color': avg_color,\n",
-    "                'avg_rgb': avg_rgb,\n",
-    "                'flattened': flattened,\n",
-    "                'clase': nombre_imagen[:6]\n",
-    "            }\n",
+    "        # Guardar los resultados\n",
+    "        vectores[nombre_imagen] = {\n",
+    "            'avg_color': [avg_color],\n",
+    "            'avg_rgb': avg_rgb,\n",
+    "            'flattened': flattened,\n",
+    "            'clase': nombre_imagen[:6]\n",
+    "        }\n",
     "\n",
     "vectores  # Mostrar los resultados"
    ]
@@ -268,7 +269,8 @@
     "#@title Solucion Ejercicio 1: Paso 7 {display-mode:\"form\"}\n",
     "\n",
     "X = np.array([value['avg_rgb'] for key, value in vectores.items()])\n",
-    "y = np.array([value['clase'] for key, value in vectores.items()])"
+    "y = np.array([value['clase'] for key, value in vectores.items()])\n",
+    "X, y"
    ]
   },
   {
@@ -280,9 +282,7 @@
    "source": [
     "#@title Solucion Ejercicio 1: Paso 8 {display-mode:\"form\"}\n",
     "\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score\n",
     "\n",
     "# Dividir el dataset en train y test\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
@@ -298,11 +298,18 @@
    "source": [
     "#@title Solucion Ejercicio 1: Paso 9 {display-mode:\"form\"}\n",
     "\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
     "# Predecir\n",
-    "model = KNeighborsClassifier(n_neighbors=3)\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "model = KNeighborsClassifier(n_neighbors=1)\n",
     "model.fit(X_train, y_train)\n",
-    "y_pred = svc.predict(X_test)\n",
-    "y_pred"
+    "y_pred = model.predict(X_test)\n",
+    "print(\"Real: \", y_test)\n",
+    "print(\"Predicion: \", y_pred)\n",
+    "\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(\"Accuracy: \", accuracy)"
    ]
   },
   {
