--- a/cursos/espanol/deeplearning/1_imagenes_a_vectores.ipynb
+++ b/cursos/espanol/deeplearning/1_imagenes_a_vectores.ipynb
@@ -56,48 +56,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e19fdc01-e0f8-471c-81c7-c21c599653c1",
-   "metadata": {},
-   "source": [
-    "Lamentablemente esta forma de convertir las imagenes a vectores no funciona muy bien para entrenar a nuestras cajas negras porque los pixeles se relacionan entre si para crear bordes, ojos, patas, etc y al ponerlos por separado las cajas negras no logran captar estas relaciones pero los cientificos empezaron a probar distintas formas de convertir las imagenes en vectores a partir de los cuales las cajas negras puedan aprender.\n",
-    "\n",
-    "Un ejemplo de estas pruebas fue la aplicacion de filtros a las imagenes. Un filtro en particular es el de deteccion de bordes que convierte una imagen de la siguiente manera:\n",
-    "\n",
-    "\n",
-    "<div style=\"text-align:center\">\n",
-    "<img src=\"img/deteccion_bordes.png\" width=\"500\" alt=\"Imagen de wikipedia\"/>\n",
-    "</div>\n",
-    "\n",
-    "\n",
-    "Estos filtros se llaman de convolucion y se consiguen multiplicando los pixeles por matrices. Este proceso es el que les da el nombre a las famosas redes convolucionales.\n",
-    "\n",
-    "<div style=\"text-align:center\">\n",
-    "<img src=\"img/2D_Convolution_Animation.gif\" width=\"500\" alt=\"Imagen de wikipedia\"/>\n",
-    "</div>\n",
-    "\n",
-    "Luego se creo otra arquitectura, Vision Transformers, que tambien permite transformar imagenes a vectores de manera muy efectiva. Esta arquitectura se basa en lo descubierto al intentar transformar texto a vectores.\n",
-    "\n",
-    "Por el momento existen estas dos arquitecturas que funcionan bien para convertir imagenes en vectores:\n",
-    "- Redes Convolucionales\n",
-    "- Redes Tranformers\n",
-    "\n",
-    "Y en cada una de estas arquitecturas existen muchas variaciones.\n",
-    "\n",
-    "Ambas arquitecturas realizan un proceso similar aunque de distinta forma y es el de encontrar formas y propiedades particulares en las imagenes para generar vectores que se podria decir que tienen una forma similar a la siguiente:\n",
-    "\n",
-    "<div style=\"text-align:center\">\n",
-    "<img src=\"img/tabla_perros_gatos_vectores2.png\" width=\"700\"/>\n",
-    "</div>\n",
-    "\n",
-    "Afortunadamente todo este proceso que llevo muchos años de prueba y error fue introducido adentro de las cajas negras y estas cajas negras mas complejas que aprenden solas a como convertir las imagenes en vectores para poder aprender se llaman cajas negras de deep learning.\n",
-    "\n",
-    "Probablemente en el futuro se sigan creando nuevas arquitecturas para convertir imagenes en vectores que sean aun mejores que las mencionadas.\n",
-    "\n",
-    "Si quieres profundizar mas en como esta compuesta la arquitectura interna de dichas cajas negras hay mas informacion en las unidades avanzadas de este curso pero no es necesario conocer en profundidad como funcionan para poder utilizarlas."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "96807e7b-c0bb-4dd3-a1bd-c952c5b90a7a",
    "metadata": {},
    "source": [
@@ -239,6 +197,7 @@
     "\n",
     "        # Identificar los pixeles que no sean blancos\n",
     "        non_blank_mask = (img_array[:,:,0] != 255) & (img_array[:,:,1] != 255) & (img_array[:,:,2] != 255)\n",
+    "        \n",
     "        # Calcular el color promedio\n",
     "        avg_color = np.mean(img_array[non_blank_mask][:,:])\n",
     "\n",
@@ -310,6 +269,48 @@
     "\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "print(\"Accuracy: \", accuracy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e19fdc01-e0f8-471c-81c7-c21c599653c1",
+   "metadata": {},
+   "source": [
+    "Si bien esta tecnica puede funcionar para casos muy simples como detectar el color de una banana, lamentablemente esta forma de convertir las imagenes a vectores no funciona muy bien en imagenes mas complejas para entrenar a nuestras cajas negras porque los pixeles se relacionan entre si para crear bordes, ojos, patas, etc y al ponerlos por separado las cajas negras no logran captar estas relaciones pero los cientificos empezaron a probar distintas formas de convertir las imagenes en vectores a partir de los cuales las cajas negras puedan aprender.\n",
+    "\n",
+    "Un ejemplo de estas pruebas fue la aplicacion de filtros a las imagenes. Un filtro en particular es el de deteccion de bordes que convierte una imagen de la siguiente manera:\n",
+    "\n",
+    "\n",
+    "<div style=\"text-align:center\">\n",
+    "<img src=\"img/deteccion_bordes.png\" width=\"500\" alt=\"Imagen de wikipedia\"/>\n",
+    "</div>\n",
+    "\n",
+    "\n",
+    "Estos filtros se llaman de convolucion y se consiguen multiplicando los pixeles por matrices. Este proceso es el que les da el nombre a las famosas redes convolucionales.\n",
+    "\n",
+    "<div style=\"text-align:center\">\n",
+    "<img src=\"img/2D_Convolution_Animation.gif\" width=\"500\" alt=\"Imagen de wikipedia\"/>\n",
+    "</div>\n",
+    "\n",
+    "Luego se creo otra arquitectura, Vision Transformers, que tambien permite transformar imagenes a vectores de manera muy efectiva. Esta arquitectura se basa en lo descubierto al intentar transformar texto a vectores.\n",
+    "\n",
+    "Por el momento existen estas dos arquitecturas que funcionan bien para convertir imagenes en vectores:\n",
+    "- Redes Convolucionales\n",
+    "- Redes Tranformers\n",
+    "\n",
+    "Y en cada una de estas arquitecturas existen muchas variaciones.\n",
+    "\n",
+    "Ambas arquitecturas realizan un proceso similar aunque de distinta forma y es el de encontrar formas y propiedades particulares en las imagenes para generar vectores que se podria decir que tienen una forma similar a la siguiente:\n",
+    "\n",
+    "<div style=\"text-align:center\">\n",
+    "<img src=\"img/tabla_perros_gatos_vectores2.png\" width=\"700\"/>\n",
+    "</div>\n",
+    "\n",
+    "Afortunadamente todo este proceso que llevo muchos años de prueba y error fue introducido adentro de las cajas negras y estas cajas negras mas complejas que aprenden solas a como convertir las imagenes en vectores para poder aprender se llaman cajas negras de deep learning.\n",
+    "\n",
+    "Probablemente en el futuro se sigan creando nuevas arquitecturas para convertir imagenes en vectores que sean aun mejores que las mencionadas.\n",
+    "\n",
+    "Si quieres profundizar mas en como esta compuesta la arquitectura interna de dichas cajas negras hay mas informacion en las unidades avanzadas de este curso pero no es necesario conocer en profundidad como funcionan para poder utilizarlas."
    ]
   },
   {
