--- a/cursos/espanol/deeplearning/1_imagenes_a_vectores.ipynb
+++ b/cursos/espanol/deeplearning/1_imagenes_a_vectores.ipynb
@@ -265,7 +265,7 @@
     "model.fit(X_train, y_train)\n",
     "y_pred = model.predict(X_test)\n",
     "print(\"Real: \", y_test)\n",
-    "print(\"Predicion: \", y_pred)\n",
+    "print(\"Prediccion: \", y_pred)\n",
     "\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "print(\"Accuracy: \", accuracy)"
