--- a/cursos/espanol/deeplearning/3.1_zero_shot_classification.ipynb
+++ b/cursos/espanol/deeplearning/3.1_zero_shot_classification.ipynb
@@ -191,7 +191,100 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title Solucion Ejercicio 1 {display-mode:\"form\"}\n"
+    "#@title Solucion Ejercicio 1: Paso 1 {display-mode:\"form\"}\n",
+    "\n",
+    "# Como el texto no esta en formato de tabla \n",
+    "# uso regex para darle el formato que quiero\n",
+    "# Consejo: utilizar chatgpt o similar para obtener la regex correcta\n",
+    "import re\n",
+    "def get_titles(text):\n",
+    "    ret = []\n",
+    "    for title in text.split('\\n'):\n",
+    "        clean = re.sub(r'^-\\s+|\\s+\\([^)]*\\)$', '', title)\n",
+    "        ret.append(clean)\n",
+    "    return ret\n",
+    "\n",
+    "comedias = \"\"\"- Risa en el paraíso (1987)\n",
+    "- Risa y lágrimas (1954)\n",
+    "- La vida en risa (1996)\n",
+    "- El club de la risa (1999)\n",
+    "- Divertido, divertido (1969)\n",
+    "- Divertida aventura (1964)\n",
+    "- Divertida mente (2015)\n",
+    "- Diversión con Bob (1994)\n",
+    "- Locura de amor (1948)\n",
+    "- Locura en el oeste (1973)\n",
+    "- Locura de verano (1986)\n",
+    "- Locura en el espacio (1987)\n",
+    "- La risa es contagiosa (1969)\n",
+    "- Diversión asegurada (2003)\n",
+    "- Locura y dinero (2008)\"\"\"\n",
+    "\n",
+    "terror = \"\"\"- Miedo (2007)\n",
+    "- Miedo en la noche (1972)\n",
+    "- Miedo a volar (1990)\n",
+    "- La matanza de Texas (1974)\n",
+    "- La matanza de Texas 2 (1986)\n",
+    "- La matanza de Texas: El origen (2007)\n",
+    "- Matanza en el colegio (1982)\n",
+    "- La masacre de los inocentes (1991)\n",
+    "- Masacre en la autopista (1977)\n",
+    "- Masacre en el hospital (1982)\n",
+    "- Masacre de zombies (1978)\n",
+    "- Miedo profundo (1998)\n",
+    "- Matanza en Fresno (2016)\n",
+    "- La masacre de Amityville (1979)\"\"\"\n",
+    "\n",
+    "\n",
+    "clean_titles_comedias = get_titles(comedias)\n",
+    "X = clean_titles_comedias\n",
+    "y = ['comedia'] * len(clean_titles_comedias)\n",
+    "\n",
+    "clean_titles_terror = get_titles(terror)\n",
+    "X.extend(clean_titles_terror)\n",
+    "y.extend(['terror'] * len(clean_titles_terror))\n",
+    "\n",
+    "import pandas as pd\n",
+    "df = pd.DataFrame({\"Titulo\": X,\"Genero\": y})\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "160dc18b-0afe-4934-8c9a-3551b57ec97d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 1: Paso 2 {display-mode:\"form\"}\n",
+    "\n",
+    "# Probamos un modelo zero shot con la primera pelicula\n",
+    "from transformers import pipeline\n",
+    "clasificador = pipeline(\"zero-shot-classification\", model=\"facebook/bart-large-mnli\", device=-1)\n",
+    "\n",
+    "texto_a_clasificar = df.iloc[0,:][\"Titulo\"]\n",
+    "posibles_clases = [\"comedia\",\"terror\"]\n",
+    "clasificador(texto_a_clasificar, posibles_clases)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bedbbb69-8172-4237-ae25-e6d019e508c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 1: Paso 3 {display-mode:\"form\"}\n",
+    "\n",
+    "# Probamos el modelo con todas las peliculas y calculamos el accuracy\n",
+    "N = len(df)\n",
+    "accuracy = 0\n",
+    "for i in range(N):\n",
+    "    result = clasificador(df.iloc[i,:][\"Titulo\"],posibles_clases)\n",
+    "    print(f\"{i}: Real:{df.iloc[i,:]['Genero']} Predecido:{result['labels'][0]}\")\n",
+    "    if df.iloc[i,:]['Genero'] == result['labels'][0]:\n",
+    "        accuracy += 1\n",
+    "print(f\"Total accuracy:{accuracy/N}\")"
    ]
   },
   {
