--- a/cursos/espanol/datascience/6_metricas.ipynb
+++ b/cursos/espanol/datascience/6_metricas.ipynb
@@ -167,7 +167,7 @@
     "\n",
     "- El **Error de Entrenamiento alto** (tambien conocido como **Underfitting** en ingles) puede estar dado por una de las siguientes condiciones:\n",
     "  - Necesitamos mas datos para entrenar nuestra caja negra\n",
-    "  - Necesitamos una caja negra que predecir datos complejos de predecir, por ejemplo los ensambles pueden predecir datos mas complejos que una regresion lineal o naive bayes porque no asumen ninguna hipotesis respecto a los datos.\n",
+    "  - Necesitamos una caja negra que pueda predecir datos complejos, por ejemplo los ensambles pueden predecir datos mas complejos que una regresion lineal porque no asumen ninguna hipotesis respecto a los datos.\n",
     "- El **Error de Prueba alto** (tambien conocido como **Overfitting** en ingles) puede estar dado por una de las siguientes condiciones:\n",
     "  - Necesitamos mas datos para entrenar nuestra caja negra\n",
     "  - Necesitamos una caja negra mas simple o un metodo para evitar que la caja negra se ajuste demasiado a los datos de prueba. Estos metodos se llaman de **regularizacion**"
