--- a/cursos/espanol/datascience/A0_intro.ipynb
+++ b/cursos/espanol/datascience/A0_intro.ipynb
@@ -24,10 +24,20 @@
     "Una vez hecho esto podemos utilizar nuestro conocimiento de programacion para generar graficos y estadisticas que nos permitan descubrir informacion extra que puede ser interesante. \n",
     "\n",
     "En esta unidad veremos las siguientes herramientas que disponemos con python para analizar datos:\n",
-    "- Graficos con Seaborn y Matplotlib\n",
-    "- Limpieza y manipulacion de datos con Pandas y Numpy\n",
-    "- Profiling: https://github.com/fbdesignpro/sweetviz, https://github.com/ydataai/ydata-profiling, \n",
-    "- Test de distribuciones de probabilidad: https://github.com/cokelaer/fitter"
+    "- Graficos:\n",
+    "  - [Seaborn](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A1_graficos_seaborn.ipynb)\n",
+    "  - [Matplotlib](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A1.1_graficos_matplotlib.ipynb)\n",
+    "- Limpieza y manipulacion de datos con \n",
+    "  - [Pandas](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A2_jugando_con_pandas.ipynb)\n",
+    "  - [Numpy](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A3_jugando_con_numpy.ipynb)\n",
+    "  - [Cleanlab](https://docs.cleanlab.ai/stable/index.html)\n",
+    "- Profiling:\n",
+    "  - [sweetviz](https://github.com/fbdesignpro/sweetviz)\n",
+    "  - [ydata](https://github.com/ydataai/ydata-profiling) \n",
+    "- [Test de distribuciones de probabilidad](https://github.com/cokelaer/fitter)\n",
+    "- Interpretabilidad de modelos de ML: \n",
+    "  - [Sklearn Inspection](https://scikit-learn.org/stable/modules/classes.html#module-sklearn.inspection)\n",
+    "  - [Shapash](https://shapash.readthedocs.io/)"
    ]
   },
   {
