--- a/cursos/espanol/datascience/E3_regresion_lineal.ipynb
+++ b/cursos/espanol/datascience/E3_regresion_lineal.ipynb
@@ -10,10 +10,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7798237-e2ef-464a-811e-bf8fc86c8778",
+   "id": "241609c4-9ebc-4ebc-8cbe-0f1239f882ed",
    "metadata": {},
    "source": [
-    "En este ejemplo intentaremos adivinar cuantos likes tiene un video de tiktok a partir de la cantidad de vistas"
+    "## Regresion Lineal\n",
+    "\n",
+    "En este ejemplo intentaremos adivinar cuantos likes tiene un video de tiktok a partir de la cantidad de vistas.\n",
+    "Suponemos que la cantidad de likes es linealmente proporcional a la cantidad de vistas. Por lo tanto buscaremos cual es la funcion que dibuja una linea cuya suma de las distancias a los puntos de nuestra tabla de entrenamiento es la menor posible. "
    ]
   },
   {
@@ -76,193 +79,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "241609c4-9ebc-4ebc-8cbe-0f1239f882ed",
-   "metadata": {},
-   "source": [
-    "## Regresion Lineal\n",
-    "\n",
-    "Suponemos que la cantidad de likes es linealmente proporcional a la cantidad de vistas. Por lo tanto buscaremos cual es la funcion que dibuja una linea cuya suma de las distancias a los puntos de nuestra tabla de entrenamiento es la menor posible. Esta linea se puede obtener de forma analitica: https://en.wikipedia.org/wiki/Simple_linear_regression"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc94f55d-f77f-454b-8282-76d843283576",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[\"x - xmean\"] = df[\"Views\"] - df[\"Views\"].mean()\n",
-    "df[\"y - ymean\"] = df[\"Likes\"] - df[\"Likes\"].mean()\n",
-    "df[\"sq(x - xmean)\"] = df[\"x - xmean\"] * df[\"x - xmean\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3819be40-d331-4d2b-a43b-81680065885c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "90cb8eb4-acc1-4b8f-9f69-1cc4d8c5cc87",
-   "metadata": {},
-   "source": [
-    "Obtengo la pendiente de la linea"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c941c064-3e01-4532-a26e-66c578552acb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "w = np.sum(df[\"x - xmean\"] * df[\"y - ymean\"]) / df[\"sq(x - xmean)\"].sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "460491d3-5b36-4890-a3ab-55365616ee2a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "w"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5bdb639d-5d6f-4740-93e5-7d4a6580c736",
-   "metadata": {},
-   "source": [
-    "Obtengo la interseccion con el eje y (ordenada al origen)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cb43faa6-1451-4f5a-94bd-9f4c2d0cd85a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b = np.mean(df[\"Likes\"] - w * df[\"Views\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f1d43065-f86c-48e4-aba6-ca6681e9b610",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "69b5cd87-b8b9-4293-ad5b-aca18bdbd0dd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "linea = lambda x: w * x + b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "63ac2015-4777-4a88-87f6-89afb05e3722",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "coef = np.polyfit(df[\"Views\"],df[\"Likes\"],1)\n",
-    "linea = np.poly1d(coef)\n",
-    "print(coef)\n",
-    "print(linea)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92b6d75b-780e-4b7f-bbf6-15055bbf593d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sns.relplot(x=\"Views\",y=\"Likes\", data=df)\n",
-    "plt.plot(df[\"Views\"], linea(df[\"Views\"]), '-');"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "73238d26-a3a3-4ff8-9bec-d7039348819f",
-   "metadata": {},
-   "source": [
-    "## Usando la libreria Scikit Learn\n",
-    "\n",
-    "La libreria sklearn nos permite obtener esta linea de forma mas simple: \n",
-    "\n",
-    "https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LinearRegression.html"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b64f558e-50c7-49a2-b57d-2f5e0c7ae862",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.linear_model import LinearRegression\n",
-    "X = df.loc[:,[\"Views\"]]\n",
-    "y = df[\"Likes\"]\n",
-    "reg = LinearRegression().fit(X, y)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bb34f219-bf19-4f02-b14f-09f3265512b4",
-   "metadata": {},
-   "source": [
-    "Obtengo la pendiente de la linea"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "66a017bd-0e95-47ce-b0e1-227d1a150bdf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reg.coef_"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bf22b7b5-c0b3-4928-b787-0b9bdbffb869",
-   "metadata": {},
-   "source": [
-    "Obtengo la interseccion con el eje y (ordenada al origen)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a3fda8e6-2528-4bf7-becd-c8bdf41602e8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reg.intercept_"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "268a6634-96bc-4de3-80a1-a2bacacd64a1",
    "metadata": {},
    "source": [
-    "# IA: adivinar y luego minimzar el error repetidamente\n",
+    "### IA: adivinar y luego minimzar el error repetidamente\n",
     "\n",
     "Otra forma de obtener dicha linea es a traves del algoritmo de gradiente descendiente. Este algorimo es muy importante en inteligencia artificial ya que nos permite encontrar un minimo de forma iterativa."
    ]
@@ -272,7 +92,7 @@
    "id": "1d752410-3c7e-44ed-bad7-14af86338502",
    "metadata": {},
    "source": [
-    "### Generamos lineas al azar\n",
+    "#### Generamos lineas al azar\n",
     "\n",
     "Empezamos generando lineas al azar para ver que tan buenas predictoras son. Para ello calculamos la suma de las distancias de los puntos de la tabla de entrenamiento a las distintas rectas."
    ]
@@ -323,7 +143,7 @@
    "id": "59cdfb08-3183-47ae-a441-3c01677971fd",
    "metadata": {},
    "source": [
-    "### Calculamos los errores de cada linea que creamos\n",
+    "#### Calculamos los errores de cada linea que creamos\n",
     "\n",
     "Elegido un w al azar podemos calcular su costo, es decir, la suma de diferencias al cuadrado de los puntos de la tabla de entrenamiento a la linea dada por w. "
    ]
@@ -379,7 +199,7 @@
     "tags": []
    },
    "source": [
-    "## El truco matematico del gradiente descendiente\n",
+    "#### El truco matematico del gradiente descendiente\n",
     "\n",
     "Teniendo la funcion de costo podemos utilizar la pendiente (derivada) de dicha funcion de costo para saber en que direccion tenemos que buscar para encontrar el minimo:"
    ]
@@ -492,7 +312,7 @@
    "id": "b06f0328-30d8-4140-a2fd-047c936cb79e",
    "metadata": {},
    "source": [
-    "### El algortimo del gradiente descendiente\n",
+    "#### El algortimo del gradiente descendiente\n",
     "\n",
     "A continuacion empiezo con un w al azar y luego lo voy modificando de a poco para ir en direccion hacia el minimo costo. Tengo que tener cuidado de ir modificando de a poco porque si el paso que doy es demasiado grande el algoritmo puede diverger (no encontrara el minimo) o puede tardar mucho si el paso es muy pequeño. A el tamaño de cada paso hacia el minimo se lo conoce como Learning Rate (LR)"
    ]
@@ -539,7 +359,7 @@
    "id": "60cc8bab-6f7a-4a07-86e6-78c1cfedf7f8",
    "metadata": {},
    "source": [
-    "## Extendemos el algoritmo para mas dimensiones\n",
+    "#### Extendemos el algoritmo para mas dimensiones\n",
     "\n",
     "Aqui extendemos el algoritmo para encontrar tambien la ordenada al origen. De la misma forma podemos extenderlo para mas dimensiones."
    ]
@@ -569,7 +389,7 @@
    "id": "e3500029-3777-48e4-95d0-7caef3de37e3",
    "metadata": {},
    "source": [
-    "# Regresion Logistica\n",
+    "## Regresion Logistica (para clasificacion)\n",
     "\n",
     "Utilizando la tecnica del gradiente descendiente en este ejemplo intentaremos adivinar si a una persona que le damos un prestamo nos devolvera el dinero. En este caso nuestros valores a predecir no son numeros sino una variable categorica que puede tener los valores SI o NO."
    ]
@@ -692,7 +512,7 @@
    "id": "9665550c-78b1-4e95-803c-26f6997a5d77",
    "metadata": {},
    "source": [
-    "## Con Scikit Learn"
+    "### Con Scikit Learn"
    ]
   },
   {
