--- a/cursos/espanol/datascience/9_interpretando_ml.ipynb
+++ b/cursos/espanol/datascience/9_interpretando_ml.ipynb
@@ -9,12 +9,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fa65dd9f-bab8-4ebd-a201-c13e9b7089f6",
+   "cell_type": "markdown",
+   "id": "ac465585-0f18-4398-9c99-417326220f80",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "- https://shap.readthedocs.io/en/latest/index.html"
+   ]
   }
  ],
  "metadata": {
