--- a/cursos/espanol/datascience/E3_regresion_lineal_frecuentista.ipynb
+++ b/cursos/espanol/datascience/E3_regresion_lineal_frecuentista.ipynb
@@ -285,10 +285,10 @@
     "\n",
     "- https://sphweb.bumc.bu.edu/otlt/MPH-Modules/BS/R/R5_Correlation-Regression/R5_Correlation-Regression4.html\n",
     "\n",
-    "1. Linearity: The relationship between X and the mean of Y is linear.\n",
-    "2. Homoscedasticity: The variance of residual is the same for any value of X.\n",
-    "3. Independencia: Observations are independent of each other.\n",
-    "4. Normalidad: Para todo valor fijo de X, Y tiene una distribucion normal.\n"
+    "1. [Linealidad](https://es.wikipedia.org/wiki/Recta#Forma_simplificada_de_la_ecuaci%C3%B3n_de_la_recta): La relacion entre X e Y es lineal.\n",
+    "2. [Homocedasticidad](https://es.wikipedia.org/wiki/Heterocedasticidad): La varianza residual es la misma para todos los valores de X. \n",
+    "3. [Independencia](https://es.wikipedia.org/wiki/Independencia_(probabilidad)): Las observaciones son independientres entre si.\n",
+    "4. [Normalidad](https://es.wikipedia.org/wiki/Distribuci%C3%B3n_normal): Para todo valor fijo de X, Y tiene una distribucion normal.\n"
    ]
   },
   {
