--- a/cursos/espanol/deeplearning/1_imagenes_a_vectores.ipynb
+++ b/cursos/espanol/deeplearning/1_imagenes_a_vectores.ipynb
@@ -205,7 +205,7 @@
     "        avg_rgb = [np.mean(img_array[non_blank_mask][:,i]) for i in range(3)]\n",
     "\n",
     "        # Aplanar la matriz\n",
-    "        flattened = img_array[non_blank_mask][:,:].flatten()\n",
+    "        flattened = img_array[:,:,:].flatten()\n",
     "\n",
     "        # Guardar los resultados\n",
     "        vectores[nombre_imagen] = {\n",
