--- a/cursos/espanol/deeplearning/1_imagenes_a_vectores.ipynb
+++ b/cursos/espanol/deeplearning/1_imagenes_a_vectores.ipynb
@@ -171,6 +171,9 @@
    "source": [
     "#@title Solucion Ejercicio 1: Paso 6 {display-mode:\"form\"}\n",
     "\n",
+    "# Ahora repetiremos todos estos pasos para cada una de las imagenes\n",
+    "# y guardaremos los vectores resultantes en un diccionario\n",
+    "\n",
     "# Url donde se encuentran las imagenes\n",
     "PATH = 'https://github.com/amiune/freecodingtour/raw/main/cursos/espanol/deeplearning/data/bananas/'\n",
     "# Tamaño al que vamos a estandarizar a todas las imagenes\n",
@@ -230,6 +233,52 @@
     "X = np.array([value['avg_rgb'] for key, value in vectores.items()])\n",
     "y = np.array([value['clase'] for key, value in vectores.items()])\n",
     "X, y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d96763a-961f-44ac-8481-53c284dceae7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 1: Paso 7 [opcional] {display-mode:\"form\"}\n",
+    "\n",
+    "# Transformar los datos a un dataframe de pandas\n",
+    "import pandas as pd\n",
+    "df = pd.DataFrame(data=X,columns=[\"R\",\"G\",\"B\"])\n",
+    "df[\"clase\"] = y\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "746325bd-3943-42ce-9c3c-f21ece137aeb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 1: Paso 7 [opcional] {display-mode:\"form\"}\n",
+    "\n",
+    "# Mostrar los vectores con  un scatter plot\n",
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "\n",
+    "# axes instance\n",
+    "fig = plt.figure(figsize=(6,6))\n",
+    "ax = Axes3D(fig)\n",
+    "fig.add_axes(ax)\n",
+    "\n",
+    "# plot\n",
+    "colores = ['red' if x == 'madura' else 'blue' for x in df.clase]\n",
+    "sc = ax.scatter(df.R, df.G, df.B, c=colores, marker='o')\n",
+    "ax.set_xlabel('R Label')\n",
+    "ax.set_ylabel('G Label')\n",
+    "ax.set_zlabel('B Label');\n",
+    "\n",
+    "# save\n",
+    "#plt.savefig(\"scatter_hue\", bbox_inches='tight')"
    ]
   },
   {
