--- a/cursos/espanol/datascience/9_interpretando_ml.ipynb
+++ b/cursos/espanol/datascience/9_interpretando_ml.ipynb
@@ -13,8 +13,9 @@
    "id": "ac465585-0f18-4398-9c99-417326220f80",
    "metadata": {},
    "source": [
-    "\n",
-    "- https://shap.readthedocs.io/en/latest/index.html"
+    "- Interpretabilidad de modelos de ML: \n",
+    "  - [Sklearn Inspection](https://scikit-learn.org/stable/modules/classes.html#module-sklearn.inspection)\n",
+    "  - [Shap](https://shap.readthedocs.io/en/latest/index.html)"
    ]
   }
  ],
