--- a/cursos/espanol/datascience/A0_intro.ipynb
+++ b/cursos/espanol/datascience/A0_intro.ipynb
@@ -34,10 +34,8 @@
     "- Profiling:\n",
     "  - [sweetviz](https://github.com/fbdesignpro/sweetviz)\n",
     "  - [ydata](https://github.com/ydataai/ydata-profiling) \n",
-    "- [Test de distribuciones de probabilidad](https://github.com/cokelaer/fitter)\n",
-    "- Interpretabilidad de modelos de ML: \n",
-    "  - [Sklearn Inspection](https://scikit-learn.org/stable/modules/classes.html#module-sklearn.inspection)\n",
-    "  - [Shapash](https://shapash.readthedocs.io/)"
+    "- Tests de distribuciones de probabilidad:\n",
+    "  - [Fitter](https://github.com/cokelaer/fitter)"
    ]
   },
   {
