--- a/cursos/espanol/deeplearning/5_obtener_vectores.ipynb
+++ b/cursos/espanol/deeplearning/5_obtener_vectores.ipynb
@@ -121,6 +121,121 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f87fe725-99ac-4855-9896-e87a24209620",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 1:\n",
+    "\n",
+    "Descarga un chat de whatsapp y utiliza los vectores y la similitud para buscar textos en dicho chat. Por ejemplo, supongamos que queremos buscar una receta de cocina de pasta y tenemos el siguiente chat:\n",
+    "- Persona A: \"Hola como estas?\"\n",
+    "- Persona B: \"Buen dia!\"\n",
+    "- Persona B: \"Muy bien y tu?\"\n",
+    "- Persona A: \"Bien, con un poco de calor\"\n",
+    "- Persona A: \"Queria hacerte una consulta a ti que eres experto en la cocina\"\n",
+    "- Persona B: \"Si dime que quieres saber\"\n",
+    "- Persona A: \"Quisiera saber cual es tu receta para hacer tallarines\"\n",
+    "- Persona B: \"Si por supuesto!\"\n",
+    "- Persona B: \"Es super simple: 1 huevo y 100 gramos de harina por persona\"\n",
+    "- Persona B: \"Si que es facil verdad?\"\n",
+    "- Persona A: \"Si! Muchas gracias!!\"\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d32c0a0-6399-4fa1-8a65-bad8c0bb4449",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Escribir aqui la solucion\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6817ad54-971d-4c17-8a84-91ec62daeade",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 1: Paso 1 {display-mode:\"form\"}\n",
+    "\n",
+    "# Cargar un modelo en espanol\n",
+    "model = SentenceTransformer('dccuchile/bert-base-spanish-wwm-cased')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56839e3e-61e7-4897-9987-53e5b2652fbf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 1: Paso 2 {display-mode:\"form\"}\n",
+    "\n",
+    "# Textos a vectorizar\n",
+    "chats = [\n",
+    "\"Hola como estas?\",\n",
+    "\"Buen dia!\",\n",
+    "\"Muy bien y tu?\",\n",
+    "\"Bien, con un poco de calor\",\n",
+    "\"Queria hacerte una consulta a ti que eres experto en la cocina\",\n",
+    "\"Si dime que quieres saber\",\n",
+    "\"Quisiera saber cual es tu receta para hacer tallarines\",\n",
+    "\"Si por supuesto!\",\n",
+    "\"Es super simple: 1 huevo y 100 gramos de harina por persona\",\n",
+    "\"Si que es facil verdad?\",\n",
+    "\"Si! Muchas gracias!!\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e75612ca-d345-45aa-a621-4fbf28b43d53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 1: Paso 3 {display-mode:\"form\"}\n",
+    "\n",
+    "# Convertir los textos a vectores\n",
+    "vectores = model.encode(chats)\n",
+    "vectores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87d2a614-2d7e-4641-9458-709ca2ab6d6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 1: Paso 4 {display-mode:\"form\"}\n",
+    "\n",
+    "# Convertir el texto a buscar en vector\n",
+    "vector_a_buscar = model.encode(\"receta de pasta\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9936860-d25b-4bdd-8091-151f3465f530",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 1: Paso 5 {display-mode:\"form\"}\n",
+    "\n",
+    "# Calcular que vector del chat es mas similar al vector a buscar\n",
+    "for i in range(len(vectores)):\n",
+    "    cos_sim = util.cos_sim(vector_a_buscar, vectores[i,:])\n",
+    "    print(f\"Similitud del coseno {i}:\", cos_sim)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "efbc1261-9804-40d0-b466-10c1823e53f9",
    "metadata": {},
    "source": [
